update until 23 Nov from imac

--- a/chat.html
+++ b/chat.html
@@ -102,13 +102,13 @@
     </form>
 
 <!-- media: no-mobile detector animation  -->
-<div id="no-mobile">
+<!-- <div id="no-mobile">
   <span>Your screen is too big ㅠㅠ</span>
 </div>
-<!-- media: no-landscape detector animation  -->
-<div id="no-landscape">
+media: no-landscape detector animation  -->
+<!-- <div id="no-landscape">
   <span>Turn your phone to Portrait Mode, please ㅠㅠ</span>
-</div>
+</div> --> 
   
       <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
   </body>
