--- a/settings-2.html
+++ b/settings-2.html
@@ -43,32 +43,44 @@
       </a>
     </div>
 </header>
-<!-- settings original layout  -->
+<!-- settings -2 alternate layout  -->
 <main class="main-screen">
       <ul class="settings-list">
 <!-- setting-icon-Notices -->
         <li class="settings_setting">
           <div class="settings_setting-column">
-            <i class="fas fa-bullhorn"></i>
-            <span>Notices</span>
+            <div class="settings_setting-column_1">
+              <i class="fas fa-bullhorn"></i>
+            </div>
+            <div class="settings_setting-column_2">
+              <span>Notices</span>
+              <span class="badge">N</span>
+            </div>
             <!-- Notification Badge -->
-            <span class="badge">N</span>
           </div>
           <div class="settings_setting-column"></div>
         </li>
  <!-- setting-icon-Kokoa Lab -->       
         <li class="settings_setting">
           <div class="settings_setting-column">
-            <i class="fas fa-flask"></i>
-            <span>Kokoa Lab</span>
+            <div class="settings_setting-column_1">
+              <i class="fas fa-flask"></i>
+            </div>
+            <div class="settings_setting-column_2">
+              <span>Kokoa Lab</span>
+            </div>
           </div>
           <div class="settings_setting-column"></div>
         </li>
  <!-- setting-icon-Versions -->       
         <li class="settings_setting">
           <div class="settings_setting-column">
-            <i class="fas fa-info-circle"></i>
-            <span>Versions</span>
+            <div class="settings_setting-column_1">
+              <i class="fas fa-info-circle"></i>
+            </div>
+            <div class="settings_setting-column_2">
+              <span>Versions</span>
+            </div>
           </div>
           <div class="settings_setting-column">Latest Versions</div>
         </li>
@@ -76,60 +88,88 @@
 <!-- setting-icon-Privacy -->
       <li class="settings_setting">
         <div class="settings_setting-column">
-          <i class="fas fa-fingerprint"></i>
-          <span>Privacy</span>
+          <div class="settings_setting-column_1">
+            <i class="fas fa-fingerprint"></i>
+          </div>
+          <div class="settings_setting-column_2">
+            <span>Privacy</span>
+          </div>
         </div>
         <div class="settings_setting-column"></div>
       </li>
 <!-- setting-icon-Notifications -->
       <li class="settings_setting">
         <div class="settings_setting-column">
-          <i class="far fa-bell"></i>
-          <span>Notifications</span>
+          <div class="settings_setting-column_1">
+            <i class="far fa-bell"></i>
+          </div>
+          <div class="settings_setting-column_2">
+            <span>Notifications</span>
+          </div>
         </div>
         <div class="settings_setting-column"></div>
       </li>
 <!-- setting-icon-Friends -->
       <li class="settings_setting">
         <div class="settings_setting-column">
-          <i class="fas fa-user-friends"></i>
-          <span>Friends</span>
+          <div class="settings_setting-column_1">
+            <i class="fas fa-user-friends"></i>
+          </div>
+          <div class="settings_setting-column_2">
+            <span>Friends</span>
+          </div>
         </div>
         <div class="settings_setting-column"></div>
       </li>
 <!-- setting-icon-Chats -->
       <li class="settings_setting">
         <div class="settings_setting-column">
-          <i class="far fa-comment"></i>
-          <span>Chats</span>
+          <div class="settings_setting-column_1">
+            <i class="far fa-comment"></i>
+          </div>
+          <div class="settings_setting-column_2">
+            <span>Chats</span>
+          </div>
         </div>
         <div class="settings_setting-column"></div>
       </li>
 <!-- setting-icon-Display -->
       <li class="settings_setting">
         <div class="settings_setting-column">
-          <i class="far fa-eye"></i>
-          <span>Display</span>
-          <!-- Notification Badge -->
-          <span class="badge">N</span>
+          <div class="settings_setting-column_1">
+            <i class="far fa-eye"></i>
+          </div>
+          <div class="settings_setting-column_2">
+            <span>Display</span>
+            <!-- Notification Badge -->
+            <span class="badge">N</span>
+          </div>
         </div>
         <div class="settings_setting-column"></div>
       </li>
 <!-- setting-icon-Themes -->
       <li class="settings_setting">
         <div class="settings_setting-column">
-          <i class="fas fa-brush"></i>
-          <span>Themes</span>
-          <!-- Notification Badge -->
-          <span class="badge">N</span>
+          <div class="settings_setting-column_1">
+            <i class="fas fa-brush"></i>
+          </div>
+          <div class="settings_setting-column_2">
+            <span>Themes</span>
+            <!-- Notification Badge -->
+            <span class="badge">N</span>
+          </div>
         </div>
         <div class="settings_setting-column">Default Theme</div>
       </li>
 <!-- setting-icon-Call -->
       <li class="settings_setting">
         <div class="settings_setting-column">
-          <i class="fas fa-phone-alt"></i>
-          <span>Call</span>
+          <div class="settings_setting-column_1">
+            <i class="fas fa-phone-alt"></i>
+          </div>
+          <div class="settings_setting-column_2">
+            <span>Call</span>
+          </div>
         </div>
         <div class="settings_setting-column"></div>
       </li>
