--- a/chats.html
+++ b/chats.html
@@ -7,93 +7,160 @@
     <title>Chats</title>
 </head>
 <body>
-    <div class="status-bar">
-        <div class="status-bar_column">
-            <span>No Service</span>
-            <i class="fas fa-wifi"></i>
-        </div>
-        <div class="status-bar_column">
-            <span>21:23</span>
-        </div>
-        <div class="status-bar_column">
-            <span>100%</span>
-            <i class="fas fa-battery-half fa-lg"></i>
-            <i class="fas fa-bolt"></i>
-        </div>
-    </div>
+<!-- status bar -->
+  <div class="status-bar-box">
+  <div class="status-bar">
+      <div class="status-bar_column">
+          <span>No Service</span>
+          <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar_column">
+          <span>18:43</span>
+      </div>
+      <div class="status-bar_column">
+          <span>11%</span>
+          <i class="fas fa-battery-full fa-lg"></i>
+          <i class="fas fa-bolt"></i>
+      </div>
+  </div>
+  </div>
 
-    <header class="screen-header">
+  <header class="screen-header">
         <h1 class="screen-header_title">Chats</h1>
         <div class="screen-header_icons">
+            <!-- search icon -->
             <a href="find.html">
-              <span><i class="fas fa-search fa-lg"></i></span>
+              <span>
+                  <i class="fas fa-search fa-lg"></i>
+              </span>
             </a>
+           <!-- chats icon -->
             <a href="friends.html">
               <span><i class="far fa-comment-dots fa-lg"></i></span>
             </a>
+            <!-- music icon  -->
             <a href="#">
-              <span><i class="fas fa-music fa-lg"></i></span>
-            </a>
-            <a href="settings.html">
-              <span><i class="fas fa-cog fa-lg"></i></span>
-            </a>
+              <span>
+                  <i class="fas fa-music fa-lg"></i>
+              </span>
+          </a>
+          <!-- setting icon  -->
+          <a href="settings.html">
+              <span>
+                  <i class="fas fa-cog fa-lg"></i>
+              </span>
+          </a>
 
         </div>
-    </header>
+  </header>
 
-    
-
-    <main class="main-screen">
-      <a href="chat.html">
-        <div class="user-component">
-            <div class="user-component_column">
-                <img 
-                    src="images/jimin-yipee.png" 
-                    class="user-component_avatar user-component_avatar" 
-                />
-                <div class="user-component_text">
-                    <h4 class="user-component_title">Jimin Yipee</h4>
-                    <h6 class="user-component_subtitle">Please check My Kokoa Account Info</h6>
+  <main class="main-screen">
+        <!--Smaller User Component #1-->
+        <div class="user-component friend-user-component">
+              <a href="chat.html">
+                  <!--user component 1st column-->
+                  <div class="user-component_column">
+                    <!-- avatar image   -->
+                    <img 
+                          src="images/jimin-yipee.png" 
+                          class="user-component_avatar user-component_avatar--sm" />
+                      <!-- User text  -->
+                      <div class="user-component_text">
+                          <h4 class="user-component_title">
+                            Jimin-Yipee
+                          </h4>
+                          <h6 class="user-component_subtitle">
+                            Please check my Kokoa Account Info
+                          </h6>
+                      </div>
+                  </div>
+                  <!--user component 2nd column-->
+                  <div class="user-component_column">
+                      <div class="user-component_text">
+                          <span class="user-component_time">
+                            21:22
+                          </span>
+                          <!-- badge.css is for this -->
+                          <div class="badge">1</div>
+                      </div>
+                  </div>
+              </a>
+          </div>
+      </div>
+      <!-- Smaller User Component #2 -->
+      <div class="user-component friend-user-component">
+            <a href="chat.html">
+                <!--user component 1st column-->
+                <div class="user-component_column">
+                  <!-- avatar image   -->
+                  <img 
+                        src="images/v.png" 
+                        class="user-component_avatar user-component_avatar--sm" />
+                    <!-- User text  -->
+                    <div class="user-component_text">
+                        <h4 class="user-component_title">
+                          V
+                        </h4>
+                        <h6 class="user-component_subtitle">
+                          Please check my Kokoa Account Info
+                        </h6>
+                    </div>
                 </div>
-            </div>
-
-            <div class="user-component_column">
-              <span class="user-component_time">21:22</span>
-              <div class="badge">1</div>
-            </div>
+                <!--user component 2nd column-->
+                <div class="user-component_column">
+                    <div class="user-component_text">
+                        <span class="user-component_time">
+                          22:20
+                        </span>
+                        <!-- badge.css is for this -->
+                        <div class="badge">1</div>
+                    </div>
+                </div>
+            </a>
         </div>
-      </a>
-    </main>
+    </div>
+  </main>
 
-    <nav class="nav">
-        <ul class="nav_list">
-            <li class="nav_btn">
-                <a class="nav_link" href="friends.html"><i class="far fa-user fa-lg"></i></a></li>
-            <li class="nav_btn">
-                <a class="nav_link" href="chats.html">
-                    <span class="nav_chat-notification badge">1</span>
-                    <i class="fas fa-comment fa-lg"></i></a></li>
-            <li class="nav_btn">
-                <a class="nav_link" href="find.html"><i class="fas fa-search fa-lg"></i></a></li>
-            <li class="nav_btn">
-                <a class="nav_link" href="more.html">
-                    <span class="nav_ellipsis-notification"> </span>
-                    <i class="fas fa-ellipsis-h fa-lg"></i></a></li>
-        </ul>
-    </nav>
+  <nav class="nav">
+      <ul class="nav_list">
+          <li class="nav_btn">
+              <a class="nav_link" href="friends.html"><i class="far fa-user fa-lg"></i>
+              </a>
+          </li>
+          <li class="nav_btn">
+              <a class="nav_link" href="chats.html">
+                  <span class="nav_chat-notification">2</span>
+                  <i class="fas fa-comment fa-lg"></i>
+              </a>
+          </li>
+          <li class="nav_btn">
+              <a class="nav_link" href="find.html">
+                  <i class="fas fa-search fa-lg"></i>
+              </a>
+          </li>
+          <li class="nav_btn">
+                  <a class="nav_link" href="more.html">
+                      <!-- <div class="nav_more-notification"><i class="fas fa-circle"></i></div>
+                      <i class="fas fa-ellipsis-h fa-lg"></i> -->
+                      <div class="nav_more-notification"> </div>
+                      <i class="fas fa-ellipsis-h fa-lg"></i>
+                  </a>
+          </li>
+      </ul>
+  </nav>
 
     <div id="splash-screen">
       <i class="fas fa-comment"></i>
     </div>
 
 <!-- media: no-mobile detector animation  -->
-<div id="no-mobile">
+<!-- <div id="no-mobile">
   <span>Your screen is too big ㅠㅠ</span>
-</div>
+</div> -->
 <!-- media: no-landscape detector animation  -->
-<div id="no-landscape">
+<!-- <div id="no-landscape">
   <span>Turn your phone to Portrait Mode, please ㅠㅠ</span>
-</div>
+</div> -->
 
     <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
 </body>
