--- a/friends.html
+++ b/friends.html
@@ -7,93 +7,119 @@
     <title>Friends</title>
 </head>
 <body>
-    <div class="status-bar">
-        <div class="status-bar_column">
-            <span>No Service</span>
-            <i class="fas fa-wifi"></i>
-        </div>
-        <div class="status-bar_column">
-            <span>18:43</span>
-        </div>
-        <div class="status-bar_column">
-            <span>11%</span>
-            <i class="fas fa-battery-half fa-lg"></i>
-            <i class="fas fa-bolt"></i>
+<!-- status bar -->
+    <div class="status-bar-box">
+        <div class="status-bar">
+            <div class="status-bar_column">
+                <span>No Service</span>
+                <i class="fas fa-wifi"></i>
+            </div>
+            <div class="status-bar_column">
+                <span>18:43</span>
+            </div>
+            <div class="status-bar_column">
+                <span>11%</span>
+                <i class="fas fa-battery-full fa-lg"></i>
+                <i class="fas fa-bolt"></i>
+            </div>
         </div>
     </div>
-
+<!-- screen header -->
     <header class="screen-header">
         <h1 class="screen-header_title">Friends</h1>
         <div class="screen-header_icons">
+            <!-- search icon -->
             <a href="find.html">
-                <span><i class="fas fa-search fa-lg"></i></span>
+                <span>
+                    <i class="fas fa-search fa-lg"></i>
+                </span>
             </a>
+            <!-- music icon  -->
             <a href="#">
-                <span><i class="fas fa-music fa-lg"></i></span>
+                <span>
+                    <i class="fas fa-music fa-lg"></i>
+                </span>
             </a>
+            <!-- setting icon  -->
             <a href="settings.html">
-                <span><i class="fas fa-cog fa-lg"></i></span>
+                <span>
+                    <i class="fas fa-cog fa-lg"></i>
+                </span>
             </a>
 
         </div>
     </header>
-
-    <a id="friends-display-link">
+<!-- friends Names display -->
+    <a id="friends-display-link" href="screens/chats.html">
         <i class="fas fa-info-circle fa-lg"></i>
-        Friends' Names Display<i class="fas fa-chevron-right fa-xs"></i>
+        Friends' Names Display
+        <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
-    <main class="friends-screen">
-        <!--User Component-->
-        <div class="user-component">
-            <a href="chats.html">
-                <div class="user-component_column">
-                    <img 
-                        src="images/biscuit.png" 
-                        class="user-component_avatar user-component_avatar--xl" 
-                    />
-                    <div class="user-component_text">
-                        <h4 class="user-component_title">Biscuit</h4>
-                        <!-- <h6 class="user-component_subtitle">this text whatever</h6> -->
-                    </div>
+<!-- friends screen -->
+<main class="main-screen">
+
+    <!--User-Owner Component-->
+    <div class="user-component">
+        <!-- whole area is a link to chats.html  -->
+        <a href="chats.html">
+            <!-- 1st column  -->
+            <div class="user-component_column">
+                <!-- user image  -->
+                <img class="user-component_avatar user-component_avatar--xl" src="images/biscuit.png" />
+                <!-- user name -->
+                <div class="user-component_text">
+                    <h4 class="user-component_title">
+                        Biscuit
+                    </h4>
+                    <!-- 
+                    <h6 class="user-component_subtitle">this text whatever</h6> -->
                 </div>
-                <div class="user-component_column"></div>
-            </a>
-        </div>
-        <!--friends screen channel-->
-        <div class="friends-screen_channel">
-            <!--channel title-->
-            <div class="friends-screen_channel-header">
-                <span>Channel</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
             </div>
-            <!--channel small icon + title-->
-            <div class="user-component">
+            <!-- 2nd Column -->
+            <div class="user-component_column"></div>
+        </a>
+    </div>
+<!--friends screen channel-->
+    <div class="friends-screen_channel">
+        <!--channel title-->
+        <div class="friends-screen_channel-header">
+            <span>Channel</span>
+            <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+
+        <!--Smaller User Component-->
+        <div class="user-component friend-user-component">
             <a href="chat.html">
                 <!--user component 1st column-->
                 <div class="user-component_column">
                     <img 
-                        src="images/bts-jimin.png" 
-                        class="user-component_avatar user-component_avatar--sm" 
-                    />
+                        src="images/kokoatalk-logo.png" 
+                        class="user-component_avatar user-component_avatar--sm" />
                     <div class="user-component_text">
                         <h4 class="user-component_title user-component_title--not-bold">Channel</h4>
-                        <!-- <h6 class="user-component_subtitle">this text whatever</h6> -->
+                        <!-- 
+                        <h6 class="user-component_subtitle">this text whatever</h6> -->
                     </div>
                 </div>
                 <!--user component 2nd column-->
                 <div class="user-component_column">
-                    <div>
-                        <span>2</span>
-                        <i class="fas fa-chevron-right fa-xs"></i>
+                    <div class="user-component_text">
+                        <div>
+                            <span>2</span>
+                            <i class="fas fa-chevron-right fa-xs"></i>
+                        </div>
+                        
                     </div>
                 </div>
             </a>
-            </div>
         </div>
-    </main>
+    </div>
 
-<!-- navigation with links -->
+</main>
+
+<!-- navigation bar -->
+<!-- Auto form: nav>ul>li*4>a + <enter>  -->
     <nav class="nav">
         <ul class="nav_list">
             <li class="nav_btn">
@@ -102,7 +128,7 @@
             </li>
             <li class="nav_btn">
                 <a class="nav_link" href="chats.html">
-                    <span class="nav_chat-notification">1</span>
+                    <span class="nav_chat-notification">2</span>
                     <i class="far fa-comment fa-lg"></i>
                 </a>
             </li>
@@ -113,7 +139,9 @@
             </li>
             <li class="nav_btn">
                     <a class="nav_link" href="more.html">
-                        <span class="nav_link-notification"> </span>
+                        <!-- <div class="nav_more-notification"><i class="fas fa-circle"></i></div>
+                        <i class="fas fa-ellipsis-h fa-lg"></i> -->
+                        <div class="nav_more-notification"> </div>
                         <i class="fas fa-ellipsis-h fa-lg"></i>
                     </a>
             </li>
@@ -124,13 +152,13 @@
         <i class="fas fa-comment"></i>
     </div>
 <!-- media: no-mobile detector animation  -->
-    <div id="no-mobile">
+    <!-- <div id="no-mobile">
         <span>Your screen is too big 😉 </span>
-    </div>
+    </div> -->
 <!-- media: no-landscape detector animation  -->
-    <div id="no-landscape">
+    <!-- <div id="no-landscape">
         <span>Turn your phone to Portrait Mode, please 😉</span>
-    </div>
+    </div> -->
 <!-- font loader -->
     <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
 </body>
