--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Welcome to Kokoa Clone</title>
 </head>
 <body>
+<!-- status bar -->
     <div class="status-bar">
         <div class="status-bar_column">
             <span>No Service</span>
@@ -16,34 +17,39 @@
             <span>18:43</span>
         </div>
         <div class="status-bar_column">
-            <span>11%</span>
-            <i class="fas fa-battery-half fa-lg"></i>
+            <span>110%</span>
+            <i class="fas fa-battery-full fa-lg"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
-
+<!-- welcome header -->
     <header class="welcome-header">
         <h1 class="welcome-header_title">Welcome to Kokoa Clone</h1>
         <p class="welcome-header_text">If you have a Kokoa Account,</p>
-        <p class="welcome-header_text">log in with your email or phone number.</p>
+        <p class="welcome-header_text"> log in with your email or phone number.</p>
     </header>
-
+<!-- login form -->
+<!-- Form:   
+    action = to which page send this data
+    method = 1. Post: send to the server
+            2. Get: Insecure, sent things can be seen on URL -->
     <form id="login-form" action="friends.html" method="get">
         <input name="username" type="text" placeholder="Email or phone number" />
         <input name="password" required type="password" placeholder="Password" />
-        <input href="friends.html" id="login-btn" type="submit" value="Log In" />
+        <input href="friends.html" type="submit" value="Log In" />
         <input type="submit" value="Sign Up" />
         <a href="#">Find Kokoa Account or Password</a>
     </form>
 
 <!-- media: no-mobile detector animation  -->
-<div id="no-mobile">
-    <span>Your screen is too big ㅠㅠ</span>
-</div>
+<!-- <div id="no-mobile">
+    <span>Your screen is too big 😉</span>
+</div> -->
 <!-- media: no-landscape detector animation  -->
-<div id="no-landscape">
-    <span>Turn your phone to Portrait Mode, please ㅠㅠ</span>
-</div>
+<!-- <div id="no-landscape">
+    <span>Turn your phone to Portrait Mode, please 😉</span>
+</div> -->
+<!-- font Awesome key -->
     <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
 </body>
 </html>
