--- a/more.html
+++ b/more.html
@@ -7,123 +7,140 @@
     <title>More</title>
 </head>
 <body>
-    <div class="status-bar">
-        <div class="status-bar_column">
-            <span>No Service</span>
-            <i class="fas fa-wifi"></i>
-        </div>
-        <div class="status-bar_column">
-            <span>21:23</span>
-        </div>
-        <div class="status-bar_column">
-            <span>100%</span>
-            <i class="fas fa-battery-half fa-lg"></i>
-            <i class="fas fa-bolt"></i>
-        </div>
-    </div>
-
-  <header class="screen-header">
-      <h1 class="screen-header_title">More</h1>
-      <div class="screen-header_icons">
-        <a href="find.html">
-          <span><i class="fas fa-search fa-lg"></i></span>
-        </a>
-        <a href="#">
-            <span><i class="fas fa-music fa-lg"></i></span>
-        </a>
-        <a href="settings.html">
-            <span class="screen-header_icon-cog">
-              <span class="cog-notification"> </span>
-              <span"><i class="fas fa-cog fa-lg"></i></span>
-            </span>
-        </a>
-
+<!-- status bar -->
+<div class="status-bar-box">
+  <div class="status-bar">
+      <div class="status-bar_column">
+          <span>No Service</span>
+          <i class="fas fa-wifi"></i>
       </div>
-  </header>
+      <div class="status-bar_column">
+          <span>18:43</span>
+      </div>
+      <div class="status-bar_column">
+          <span>11%</span>
+          <i class="fas fa-battery-full fa-lg"></i>
+          <i class="fas fa-bolt"></i>
+      </div>
+  </div>
+</div>
+<!-- screen header -->
+<header class="screen-header">
+  <h1 class="screen-header_title">More</h1>
+  <div class="screen-header_icons">
+      <!-- search icon -->
+      <a href="find.html">
+          <span>
+              <i class="fas fa-search fa-lg"></i>
+          </span>
+      </a>
+      <!-- music icon  -->
+      <a href="#">
+          <span>
+              <i class="fas fa-music fa-lg"></i>
+          </span>
+      </a>
+      <!-- setting icon  -->
+      <a href="settings.html">
+        <span class="screen-header_icon-cog dot-notification-parent">
+            <span class="cog-notification dot-notification"> </span>
+            <i class="fas fa-cog fa-lg cog-icon"></i>
+        </span>
+      </a>
+  </div>
+</header>
+<!-- main screen  -->
+<main class="main-screen more-screen">
 
-  <div class="user-component">
-    <div class="user-component_column">
-        <img 
-            src="images/biscuit.png" 
-            class="user-component_avatar" 
-        />
-        <div class="user-component_text">
-            <h4 class="user-component_title">Biscuit</h4>
-            <span class="user-component_subtitle">+65-8282-7979
-              <i class="fas fa-exclamation-circle fa-sm"></i>
-            </span>            
-        </div>
-    </div>
-    <div class="user-component_column comment-icon">
-      <i class="far fa-comment-alt fa-2x"></i></div>
+<!--User-Owner Component-->
+  <div class="user-component more-user-component">
+  <!-- whole area is a link to chats.html  -->
+    <a href="chats.html">
+      <!-- 1st column  -->
+      <div class="user-component_column">
+          <!-- user image  -->
+          <img class="user-component_avatar user-component_avatar--xl" src="images/biscuit.png" />
+          <!-- user name -->
+          <div class="user-component_text">
+              <h4 class="user-component_title">
+                  Biscuit
+              </h4>
+              <h6 class="user-component_subtitle">
+                +65 8282-7979
+                <i class="fas fa-info-circle fa-sm"></i>
+              </h6>
+          </div>
+      </div>
+      <!-- 2nd Column -->
+      <div class="user-component_column more-screen-user-icon">
+        <i class="far fa-comment-alt fa-2x"></i>
+      </div>
+    </a>
   </div>
     
-
-  <main class="main-screen more-screen">
-            <!--1st Icon Row-->
+<!--1st Icon Row-->
       <div class="icon-row">
-
+      <!-- calendar icon  -->
           <div class="icon-row_icon">
             <i class="far fa-calendar-check fa7xx"></i>
             <span>Calendar</span></div>
-
-          <div class="icon-row_icon talk-drive">
+      <!-- Talk Drive icon  -->
+          <div class="icon-row_icon dot-notification-parent">
+            <span class="dot-notification more-icon-row-dot-notification"> </span>
             <i class="far fa-hdd fa-7x"></i>
-            <span class="dot-notification"> </span>
-            <span class="dot-notification-holder">Talk Drive</span>
+            <span>Talk Drive</span>
           </div>
-
+      <!-- Emoticons icon  -->
           <div class="icon-row_icon">
             <i class="far fa-smile fa-7x"></i>
             <span>Emoticons</span>
           </div>
-
+      <!-- Themes icon  -->
           <div class="icon-row_icon">
             <i class="fas fa-brush fa-7x"></i>
             <span class>Themes</span>
           </div>
       </div>
-        <!--2nd Icon Row-->
+<!-- 2nd Icon Row -->
       <div class="icon-row icon-row_2nd-row">
-        <div class="icon-row_2nd-row_icons">
-
-          <div class="icon-row_icon icon-row_2nd-row_icon">
-            <div class="icon-row_icon icon-row_2nd-row_icon-image">
-              <i class="far fa-user-circle fa-7x"></i>
+      <!-- Account icon  --> 
+            <div class="icon-row_icon icon-row_2nd-row_icon">
+              <div class="icon-row_icon icon-row_2nd-row_icon-image">
+                <i class="far fa-user-circle fa-7x"></i>
+              </div>
+              <span class>Account</span>
             </div>
-            <span class>Account</span>
-          </div>
-
-          <div class="icon-row_icon  icon-row_2nd-row_icon">
-            <div class="icon-row_icon icon-row_2nd-row_icon-image">
-              <i class="far fa-comments fa-7x"></i>
-            </div>
-            <span class>Openchat</span>
-          </div>  
-        </div> 
-      </div>
-
+      <!-- Openchat icon  --> 
+            <div class="icon-row_icon  icon-row_2nd-row_icon">
+              <div class="icon-row_icon icon-row_2nd-row_icon-image">
+                <i class="far fa-comments fa-7x"></i>
+              </div>
+              <span class>Openchat</span>
+            </div> 
+      </div> 
+ 
+<!-- Moe Suggestions Screen  -->
       <div class="more-suggestions pageline">
-        <h6 class="more-suggestions_title">Suggestions</h6>
+        <h4 class="more-suggestions_title">Suggestions</h4>
 
           <div class="more-suggestions_icons">
-
+            <!-- Kokoa Story icon  -->
             <div class="more-suggestions_icon">
-              <div class="more-suggestions_icons-image">
-                <i class="fas fa-quote-right"></i>
+              <div class="more-suggestions_icon-image">
+                <i class="fas fa-quote-right fa-lg"></i>
               </div>
               <span>Kokoa Story</span>
             </div>  
-
+            <!-- Kokoa Friends icon  -->
             <div class="more-suggestions_icon">
-              <div class="more-suggestions_icons-image">
+              <div class="more-suggestions_icon-image">
                 <img src="images/kokoafriends.png" />
               </div>
               <span>Kokoa Friends</span>
             </div>
-
+            <!-- Friends Gem icon  -->
             <div class="more-suggestions_icon">
-              <div class="more-suggestions_icons-image">
+              <div class="more-suggestions_icon-image">
                 <img src="images/friendsgem.png" />
               </div>
               <span>Friends Gem</span>
@@ -144,9 +161,11 @@
                 <a class="nav_link" href="find.html">
                   <i class="fas fa-search fa-lg"></i></a></li>
             <li class="nav_btn">
-                <a class="nav_link" href="more.html">
-                    <span class="nav_link-notification"> </span>
-                    <i class="fas fa-ellipsis-h fa-lg"></i></a></li>
+                    <a class="nav_link" href="more.html">
+                        <div class="nav_more-notification"> </div>
+                        <i class="fas fa-ellipsis-h fa-lg"></i>
+                    </a>
+            </li>
       </ul>
     </nav>
 
@@ -155,13 +174,13 @@
     </div>
 
 <!-- media: no-mobile detector animation  -->
-<div id="no-mobile">
+<!-- <div id="no-mobile">
   <span>Your screen is too big ㅠㅠ</span>
-</div>
+</div> -->
 <!-- media: no-landscape detector animation  -->
-<div id="no-landscape">
+<!-- <div id="no-landscape">
   <span>Turn your phone to Portrait Mode, please ㅠㅠ</span>
-</div>
+</div> -->
 
     <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
 </body>
