--- a/chats.html
+++ b/chats.html
@@ -24,7 +24,7 @@
       </div>
   </div>
   </div>
-
+<!-- screen-header  -->
   <header class="screen-header">
         <h1 class="screen-header_title">Chats</h1>
         <div class="screen-header_icons">
