--- a/more.html
+++ b/more.html
@@ -101,26 +101,33 @@
             <span class>Themes</span>
           </div>
       </div>
-<!-- 2nd Icon Row -->
-      <div class="icon-row icon-row_2nd-row">
-      <!-- Account icon  --> 
-            <div class="icon-row_icon icon-row_2nd-row_icon">
-              <div class="icon-row_icon icon-row_2nd-row_icon-image">
-                <i class="far fa-user-circle fa-7x"></i>
-              </div>
-              <span class>Account</span>
-            </div>
-      <!-- Openchat icon  --> 
-            <div class="icon-row_icon  icon-row_2nd-row_icon">
-              <div class="icon-row_icon icon-row_2nd-row_icon-image">
-                <i class="far fa-comments fa-7x"></i>
-              </div>
-              <span class>Openchat</span>
-            </div> 
-      </div> 
+<!-- second Icon Row  -->
+<div class="icon-row">
+  <!-- Account icon  -->
+      <div class="icon-row_icon">
+        <i class="far fa-user-circle fa-7x"></i>
+        <span class>Account</span>
+      </div>
+  <!-- OpenChat icon  -->
+      <div class="icon-row_icon">
+        <i class="far fa-comments fa-7x"></i>
+        <span>Openchat</span>
+      </div>
+  <!-- Empty  -->
+      <div class="icon-row_icon not-visible">
+        <i class="far fa-comments fa-7x"></i>
+        <span>icon-XXX</span>
+      </div>
+  <!-- Empty  -->
+      <div class="icon-row_icon not-visible">
+        <i class="far fa-comments fa-7x"></i>
+        <span>icon-XXX</span>
+      </div>
+  </div>
+
  
 <!-- Moe Suggestions Screen  -->
-      <div class="more-suggestions pageline">
+  <div class="more-suggestions pageline">
         <h4 class="more-suggestions_title">Suggestions</h4>
 
           <div class="more-suggestions_icons">
