--- a/settings.html
+++ b/settings.html
@@ -18,13 +18,13 @@
           <span>18:43</span>
       </div>
       <div class="status-bar_column">
-          <span>11%</span>
+          <span>110%</span>
           <i class="fas fa-battery-full fa-lg"></i>
           <i class="fas fa-bolt"></i>
       </div>
   </div>
 </div>
-
+<!-- alt header -->
 <header class="alt-header">
     <!-- Left Chevron Icon    -->
     <div class="alt-header_column screen-header_icons">
