--- a/find.html
+++ b/find.html
@@ -171,13 +171,13 @@
   </div>
 
 <!-- media: no-mobile detector animation  -->
-<!-- <div id="no-mobile">
-  <span>Your screen is too big ㅠㅠ</span>
+<div id="no-mobile">
+  <span>Your screen is too big 😉 </span>
 </div>
-media: no-landscape detector animation  -->
-<!-- <div id="no-landscape">
-  <span>Turn your phone to Portrait Mode, please ㅠㅠ</span>
-</div> --> 
+<!-- media: no-landscape detector animation  -->
+<div id="no-landscape">
+  <span>Turn your phone to Portrait Mode, please 😉 </span>
+</div>
 
 <!-- font loader -->
     <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
