--- a/friends.html
+++ b/friends.html
@@ -152,13 +152,13 @@
         <i class="fas fa-comment"></i>
     </div>
 <!-- media: no-mobile detector animation  -->
-    <!-- <div id="no-mobile">
-        <span>Your screen is too big 😉 </span>
-    </div> -->
+<div id="no-mobile">
+    <span>Your screen is too big 😉 </span>
+  </div>
 <!-- media: no-landscape detector animation  -->
-    <!-- <div id="no-landscape">
-        <span>Turn your phone to Portrait Mode, please 😉</span>
-    </div> -->
+<div id="no-landscape">
+    <span>Turn your phone to Portrait Mode, please 😉 </span>
+  </div>
 <!-- font loader -->
     <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
 </body>
