--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     </form>
 
 <!-- media: no-mobile detector animation  -->
-<!-- <div id="no-mobile">
-    <span>Your screen is too big 😉</span>
-</div> -->
+<div id="no-mobile">
+    <span>Your screen is too big 😉 </span>
+  </div>
 <!-- media: no-landscape detector animation  -->
-<!-- <div id="no-landscape">
-    <span>Turn your phone to Portrait Mode, please 😉</span>
-</div> -->
+<div id="no-landscape">
+    <span>Turn your phone to Portrait Mode, please 😉 </span>
+  </div>
 <!-- font Awesome key -->
     <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
 </body>
