--- a/settings.html
+++ b/settings.html
@@ -173,13 +173,13 @@
   </div>
 
 <!-- media: no-mobile detector animation  -->
-<!-- <div id="no-mobile">
-  <span>Your screen is too big ㅠㅠ</span>
-</div> -->
+<div id="no-mobile">
+  <span>Your screen is too big 😉 </span>
+</div>
 <!-- media: no-landscape detector animation  -->
-<!-- <div id="no-landscape">
-  <span>Turn your phone to Portrait Mode, please ㅠㅠ</span>
-</div> -->
+<div id="no-landscape">
+  <span>Turn your phone to Portrait Mode, please 😉 </span>
+</div>
 
     <script src="https://kit.fontawesome.com/c562d3be53.js" crossorigin="anonymous"></script>
 </body>
