--- a/friends.html
+++ b/friends.html
@@ -153,7 +153,7 @@
     </div>
 <!-- media: no-mobile detector animation  -->
 <div id="no-mobile">
-    <span>Your screen is too big 😉 </span>
+    <span>Your screen is super big 😉 </span>
   </div>
 <!-- media: no-landscape detector animation  -->
 <div id="no-landscape">
