friends link update

--- a/friends.html
+++ b/friends.html
@@ -50,7 +50,7 @@
         </div>
     </header>
 <!-- friends Names display -->
-    <a id="friends-display-link" href="screens/chats.html">
+    <a id="friends-display-link" href="chats.html">
         <i class="fas fa-info-circle fa-lg"></i>
         Friends' Names Display
         <i class="fas fa-chevron-right fa-xs"></i>
